// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image Block should render Default 1`] = `
<DocumentFragment>
  <figure
    class="css-1ma568x-ImageBlockWrapper eekavcu2"
  >
    <div
      class="css-190ggwe-ImageBlockInnerWrapper eekavcu1"
    >
      <img
        alt="An image description"
        class="css-1yo7qmb-ImageWrapper-ImageBlock e1shv2yg0"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
        srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
        title="An image title"
      />
      <figcaption>
        Image caption (Quelle: Reddit.com)
      </figcaption>
    </div>
  </figure>
</DocumentFragment>
`;

exports[`Image Block should render WithClassName 1`] = `
<DocumentFragment>
  <figure
    class="extra-classname css-1ma568x-ImageBlockWrapper eekavcu2"
  >
    <div
      class="css-190ggwe-ImageBlockInnerWrapper eekavcu1"
    >
      <img
        alt="An image description"
        class="css-1yo7qmb-ImageWrapper-ImageBlock e1shv2yg0"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
        srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
        title="An image title"
      />
      <figcaption>
        Image caption (Quelle: Reddit.com)
      </figcaption>
    </div>
  </figure>
</DocumentFragment>
`;

exports[`Image Block should render WithEmotion 1`] = `
<DocumentFragment>
  <figure
    class="css-1ma568x-ImageBlockWrapper eekavcu2"
  >
    <div
      class="css-190ggwe-ImageBlockInnerWrapper eekavcu1"
    >
      <img
        alt="An image description"
        class="css-1yo7qmb-ImageWrapper-ImageBlock e1shv2yg0"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
        srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
        title="An image title"
      />
      <figcaption>
        Image caption (Quelle: Reddit.com)
      </figcaption>
    </div>
  </figure>
</DocumentFragment>
`;

exports[`Image Block should render WithLink 1`] = `
<DocumentFragment>
  <figure
    class="css-1ma568x-ImageBlockWrapper eekavcu2"
  >
    <div
      class="css-190ggwe-ImageBlockInnerWrapper eekavcu1"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-8z4mds-MuiTypography-root-MuiLink-root"
        href="https://example.com"
        target="_blank"
      >
        <img
          alt="An image description"
          class="css-1yo7qmb-ImageWrapper-ImageBlock e1shv2yg0"
          loading="lazy"
          sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
          srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
          title="An image title"
        />
      </a>
      <figcaption>
        Image caption (Quelle: Reddit.com)
      </figcaption>
    </div>
  </figure>
</DocumentFragment>
`;

exports[`Image Block should render WithoutCaption 1`] = `
<DocumentFragment>
  <figure
    class="css-1ma568x-ImageBlockWrapper eekavcu2"
  >
    <div
      class="css-190ggwe-ImageBlockInnerWrapper eekavcu1"
    >
      <img
        alt="An image description"
        class="css-1yo7qmb-ImageWrapper-ImageBlock e1shv2yg0"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
        srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
        title="An image title"
      />
      <figcaption>
         (Quelle: Reddit.com)
      </figcaption>
    </div>
  </figure>
</DocumentFragment>
`;

exports[`Image Block should render WithoutSource 1`] = `
<DocumentFragment>
  <figure
    class="css-1ma568x-ImageBlockWrapper eekavcu2"
  >
    <div
      class="css-190ggwe-ImageBlockInnerWrapper eekavcu1"
    >
      <img
        alt="An image description"
        class="css-1yo7qmb-ImageWrapper-ImageBlock e1shv2yg0"
        loading="lazy"
        sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
        srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
        title="An image title"
      />
      <figcaption>
        Image caption 
      </figcaption>
    </div>
  </figure>
</DocumentFragment>
`;
